wordpress/files/wp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /wordpress
        backend:
          serviceName: wordpress
          servicePort: 80
  - host: wordpress.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
